# marimo-hello-eo

./: .gitignore  Dockerfile  Dockerfile.old  README.md  docker-compose.yml
app/: .marimo.toml  hello-landsat.py  pixi.toml  pyproject.toml
