[project]
description = "A simple marimo notebook/app environment for getting started with Earth Observation-oriented work."
name = "marimo-hello-eo"
requires-python = ">=3.14"
version = "0.1.1"


[tool.pixi.workspace]
name = "marimo-hello-eo"
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.14.3,<3.15"
gdal = ">=3.12.2,<4"
marimo = ">=0.19.11,<0.20"
planetary-computer = ">=1.0.0,<2"
shapely = ">=2.1.2,<3"
stackstac = ">=0.5.1,<0.6"
plotly = ">=6.5.2,<7"
ruff = ">=0.15.1,<0.16"


[tool.marimo.package_management]
manager = "pixi"

[tool.marimo.runtime]
auto_reload = "lazy"
